src/objects/TestCo_Lead__x.object
<CustomObject>
    <externalDataSource>TestCo</externalDataSource>
    <externalName>Lead</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <externalDeveloperName>Company</externalDeveloperName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountId__c</fullName>
        <externalDeveloperName>ConvertedAccountId</externalDeveloperName>
        <label>Converted Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedContactId__c</fullName>
        <externalDeveloperName>ConvertedContactId</externalDeveloperName>
        <label>Converted Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <externalDeveloperName>ConvertedDate</externalDeveloperName>
        <label>Converted Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId__c</fullName>
        <externalDeveloperName>ConvertedOpportunityId</externalDeveloperName>
        <label>Converted Opportunity ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <externalDeveloperName>CurrencyIsoCode</externalDeveloperName>
        <label>Lead Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV_Address_Validation_Status_c__c</fullName>
        <externalDeveloperName>INFA_AV__Address_Validation_Status__c</externalDeveloperName>
        <label>Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsConverted</externalDeveloperName>
        <label>Converted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnreadByOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsUnreadByOwner</externalDeveloperName>
        <label>Unread By Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>Jigsaw Contact ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID_c__c</fullName>
        <externalDeveloperName>User_ID__c</externalDeveloperName>
        <label>User ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <externalDeveloperName>Website</externalDeveloperName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>TestCo Lead</label>
    <pluralLabel>TestCo Leads</pluralLabel>
</CustomObject>